[package]
edition = "2021"
name = "ruby-sdk"
version = "0.1.0"
authors = ["R. Arruda <git@rarruda.org>"]

[lib]
name = "ruby_sdk"
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0.68"
magnus = "0.4.4"
unleash-yggdrasil = {path = "../unleash-yggdrasil"}
unleash-types = "0.7.0"

[dependencies.serde]
features = ["derive"]
version = "1.0"
